--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 APP_NAME=Sami
 APP_ENV=local
 APP_KEY=base64:OUXfy+vjt70sneOXxmBLOzhpWAL/cIAMur4n7R/uhAQ=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://onesoit.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=sami
-DB_USERNAME=root
-DB_PASSWORD=
+# DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3307
+# DB_DATABASE=ones_ones
+# DB_USERNAME=root
+# DB_PASSWORD=123456789
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
